Revert "Issue #2120449 by el7cosmos: Incorrect alignment of form elements on administer users screen"
This reverts commit eccea6737e80bf2ef0a3b8aecbaf3cdddccafe25.

--- a/bootstrap_subtheme/less/overrides.less
+++ b/bootstrap_subtheme/less/overrides.less
@@ -641,15 +641,6 @@ td.radio {
   }
 }
 
-// Exposed filters
-.form-horizontal .form-group label {
-  .make-sm-column(2);
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 7px;
-  text-align: right;
-}
-
 // Treat all links inside alert as .alert-link
 .alert a {
   font-weight: @alert-link-font-weight;
